language/move-lang/tests/move_check/parser/function_visibility_multiple.exp
error: 

   ┌── tests/move_check/parser/function_visibility_multiple.move:2:19 ───
   │
 2 │     public(script script) fun f() {}
   │                   ^^^^^^ Unexpected 'script'
   ·
 2 │     public(script script) fun f() {}
   │                   ------ Expected ')'
   │

