language/move-lang/tests/move_check/parser/function_visibility_multiple.move
module M {
    public(script script) fun f() {}
}
